--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,22 @@ repos:
   hooks:
   -   id: trailing-whitespace
   -   id: end-of-file-fixer
+- repo: https://github.com/pre-commit/mirrors-prettier
+  rev: v3.0.3
+  hooks:
+  - id: prettier
+    files: frontend\/.*$ # files in frontend folder
+- repo: https://github.com/pre-commit/mirrors-eslint
+  rev: v8.51.0
+  hooks:
+  - id: eslint
+    types: [file]
+    files: frontend\/src\/.*(?:\.[jt]sx?|\.vue)$ # *.js, *.jsx, *.ts, *.tsx, *.vue in frontend/src folder
+    args:
+    - --ignore-path
+    - frontend/.eslintignore
+    - --config
+    - frontend/.eslintrc.cjs
 - repo: https://github.com/psf/black
   rev: "23.7.0"
   hooks:
