--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "offspot_metrics_frontend",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -12,16 +12,33 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@fortawesome/vue-fontawesome": "^3.0.3",
-    "@popperjs/core": "^2.11.8",
+    "@fortawesome/vue-fontawesome": "^3.0.5",
     "axios": "^1.6.0",
-    "bootstrap": "^5.3.0",
     "pinia": "^2.1.4",
+    "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.2.47",
-    "vue-router": "4"
+    "vue-router": "4",
+    "vuetify": "^3.4.4"
   },
   "devDependencies": {
+    "@types/glob": "^8.1.0",
+    "@types/marked": "^4.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
     "@vitejs/plugin-vue": "^4.1.0",
-    "vite": "^4.3.9"
+    "@vue/eslint-config-prettier": "^7.1.0",
+    "@vue/eslint-config-standard": "^8.0.1",
+    "@vue/eslint-config-typescript": "^11.0.2",
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-html": "^7.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.10.0",
+    "prettier": "^2.8.7",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3",
+    "vite": "^4.3.9",
+    "vue-eslint-parser": "^9.1.1",
+    "vue-tsc": "^1.2.0"
   }
 }
