--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "fastapi[all] == 0.101.1",
     "fastapi-pagination == 0.12.9",
     "pydantic == 2.3.0", # this is also a sub-dep of fastapi but we rely a lot on it
+    "pyhumps==3.8.0",
     "python-dateutil == 2.8.2",
     "PyYAML == 6.0.1",
     "SQLAlchemy == 2.0.20",
