--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -69,6 +69,9 @@ exclude = [
   "/.github",
 ]
 
+[tool.hatch.build.targets.wheel]
+packages = ["src/offspot_metrics_backend"]
+
 [tool.hatch.envs.default]
 features = ["dev"]
 
