Fix dev instrutions + do not mount the whole frontend folder
Not mounting the whole frontend folder is mandatory to still use the
node_modules folder present in the Docker image (otherwise you will use
the deps present - or missing - on your local machine)

--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -48,7 +48,8 @@ services:
       context: ../frontend
     container_name: om_frontend-tools
     volumes:
-      - ../frontend:/work
+      - ../frontend/public:/work/public
+      - ../frontend/src:/work/src
     ports:
       - 127.0.0.1:8003:5173
   kiwix-serve:
