--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
-  backend:
-    build: ../backend
-    container_name: om_backend
+  metrics:
+    build: ..
+    container_name: om_metrics
     volumes:
       - ../backend/src/offspot_metrics_backend:/usr/local/lib/python3.11/site-packages/offspot_metrics_backend
       - reverse-proxy-srv:/reverse-proxy-logs
