--- a/dev/frontend-tools/Dockerfile
+++ b/dev/frontend-tools/Dockerfile
@@ -5,5 +5,5 @@ WORKDIR /work
 COPY . /work
 RUN yarn
 ENV NODE_ENV=dev
-ENV VITE_BACKEND_ROOT_API http://localhost:8002/v1
+ENV VITE_BACKEND_ROOT_API http://localhost:8002/api/v1
 CMD ["yarn", "dev", "--host", "0.0.0.0", "--port", "5173"]
