--- a/.github/workflows/Publish.yaml
+++ b/.github/workflows/Publish.yaml
@@ -1,4 +1,4 @@
-name: Build and upload to PyPI
+name: Build and upload to Docker registry
 
 on:
   release:
@@ -7,8 +7,6 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-22.04
-    permissions:
-      id-token: write  # mandatory for PyPI trusted publishing
 
     steps:
       - uses: actions/checkout@v3
