--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "apexcharts": "^3.44.2",
     "axios": "^1.6.0",
     "pinia": "^2.1.4",
-    "vite-plugin-vuetify": "^1.0.2",
+    "vite-plugin-vuetify": "^2.0.1",
     "vue": "^3.2.47",
     "vue-router": "4",
     "vue3-apexcharts": "^1.4.4",
@@ -24,22 +24,22 @@
   },
   "devDependencies": {
     "@types/glob": "^8.1.0",
-    "@types/marked": "^4.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
-    "@vitejs/plugin-vue": "^4.1.0",
-    "@vue/eslint-config-prettier": "^7.1.0",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
+    "@vitejs/plugin-vue": "^5.0.2",
+    "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-standard": "^8.0.1",
-    "@vue/eslint-config-typescript": "^11.0.2",
-    "eslint": "^8.38.0",
-    "eslint-config-prettier": "^8.8.0",
+    "@vue/eslint-config-typescript": "^12.0.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-html": "^7.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.1.2",
     "eslint-plugin-vue": "^9.10.0",
-    "prettier": "^2.8.7",
+    "marked": "^11.1.1",
+    "prettier": "^3.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3",
-    "vite": "^4.3.9",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.11",
     "vue-eslint-parser": "^9.1.1",
     "vue-tsc": "^1.2.0"
   }
