--- a/backend/src/offspot_metrics_backend/alembic.ini
+++ b/backend/src/offspot_metrics_backend/alembic.ini
@@ -69,13 +69,13 @@ sqlalchemy.url = driver://user:pass@localhost/dbname
 # detail and examples
 
 # format using "black" - use the console_scripts runner, against the "black" entrypoint
-hooks = black isort
+hooks = black ruff
 black.type = console_scripts
 black.entrypoint = black
 black.options = REVISION_SCRIPT_FILENAME
-isort.type = console_scripts
-isort.entrypoint = isort
-isort.options = --profile black REVISION_SCRIPT_FILENAME
+ruff.type = exec
+ruff.executable = ruff
+ruff.options = format REVISION_SCRIPT_FILENAME
 
 # Logging configuration
 [loggers]
