--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,9 +19,9 @@ classifiers = [
 ]
 dependencies = [
     "alembic == 1.13.1",
-    "fastapi[all] == 0.108.0",
+    "fastapi[all] == 0.109.2",
     "fastapi-pagination == 0.12.14",
-    "pydantic == 2.5.3", # this is also a sub-dep of fastapi but we rely a lot on it
+    "pydantic == 2.6.0", # this is also a sub-dep of fastapi but we rely a lot on it
     "pyhumps==3.8.0",
     "python-dateutil == 2.8.2",
     "PyYAML == 6.0.1",
@@ -35,22 +35,22 @@ scripts = [
     "invoke == 2.2.0",
 ]
 lint = [
-    "black == 23.12.1",
-    "ruff == 0.1.11",
+    "black == 24.1.1",
+    "ruff == 0.2.0",
 ]
 check = [
-    "pyright == 1.1.345",
+    "pyright == 1.1.349",
 ]
 test = [
-    "coverage == 7.4.0",
+    "coverage == 7.4.1",
     "httpx == 0.26.0",
-    "pytest == 7.4.4",
-    "pytest-asyncio == 0.23.3",
+    "pytest == 7.4.4", # 8.0.0 not yet available due to pytest-asyncio constraint <8
+    "pytest-asyncio == 0.23.4",
 ]
 dev = [
     "pre-commit == 3.6.0",
     "debugpy == 1.8.0",
-    "ipykernel == 6.28.0",
+    "ipykernel == 6.29.0",
     "offspot_metrics_backend[scripts]",
     "offspot_metrics_backend[lint]",
     "offspot_metrics_backend[test]",
@@ -113,6 +113,8 @@ target-version = ['py312']
 target-version = "py312"
 line-length = 88
 src = ["src"]
+
+[tool.ruff.lint]
 select = [
   "A",  # flake8-builtins
   # "ANN",  # flake8-annotations
@@ -191,17 +193,17 @@ unfixable = [
   "F401",
 ]
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 known-first-party = ["offspot_metrics_backend"]
 
-[tool.ruff.flake8-bugbear]
+[tool.ruff.lint.flake8-bugbear]
 # add exceptions to B008 for fastapi.
 extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]
 
-[tool.ruff.flake8-tidy-imports]
+[tool.ruff.lint.flake8-tidy-imports]
 ban-relative-imports = "all"
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 # Tests can use magic values, assertions, and relative imports
 "tests/**/*" = ["PLR2004", "S101", "TID252"]
 # Synthetic data generator is using pseudo-random generator on purpose
