--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "offspot_metrics_frontend",
   "private": true,
-  "version": "0.3.0",
+  "version": "0.4.0-dev0",
   "type": "module",
   "scripts": {
     "dev": "vite",
